--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,7 @@
 </head>
 <body class="align">
 <h1>Inventory Management Systems</h1>
+<a th:href="@{'/deletebook/'}">Add</a>
 <table id="example" class="table" style="width: 100%">
     <thead>
     <tr>
@@ -29,7 +30,7 @@
         <td th:text="${book.price}"></td>
         <td th:text="${book.inventory}"></td>
         <td><a th:href="@{'/deletebook/'+ ${book.title}}">DEL</a></td>
-        <td><a>EDIT</a></td>
+        <td><a th:href="@{'/editbook/'+ ${book.title}}">EDIT</a></td>
     </tr>
     </tbody>
 </table>
