renaming add button to add book

--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -7,7 +7,7 @@
 </head>
 <body class="align">
 <h1>Inventory Management Systems</h1>
-<a th:href="@{'/addbook/'}"><button  class="btn btn-success">Add</button></a>
+<a th:href="@{'/addbook/'}"><button  class="btn btn-success">Add Book</button></a>
 <table id="example" class="table table-striped" style="width: 100%">
     <thead>
     <tr>
