--- a/src/main/resources/templates/booklist.html
+++ b/src/main/resources/templates/booklist.html
@@ -14,6 +14,7 @@
         <th>Title</th>
         <th>Author</th>
         <th>Year</th>
+        <th>Category</th>
         <th>ISBN</th>
         <th>Price</th>
         <th>Inventory</th>
@@ -26,6 +27,7 @@
         <td th:text="${book.title}"></td>
         <td th:text="${book.author}"></td>
         <td th:text="${book.year}"></td>
+        <td th:text="${book.category?.name}"></td>
         <td th:text="${book.isbn}"></td>
         <td th:text="${book.price}"></td>
         <td th:text="${book.inventory}"></td>
