--- a/src/main/resources/templates/editbook.html
+++ b/src/main/resources/templates/editbook.html
@@ -9,7 +9,8 @@
 <h1>Edit book</h1>
 <a th:href="@{'/booklist/'}">Back</a>
 
-<form action="#" th:action="@{/updatebook}" th:object="${book}" method="post" >
+<form action="#" th:action="@{../savebook}" th:object="${book}" method="post" >
+    <input type="hidden" id="id" th:field="*{id}" />
     <table>
         <tr>
             <td><label for="title">Title</label></td>
@@ -32,7 +33,7 @@
             <td><input type="text" th:field="*{price}" id="price" placeholder="10.00"></td>
         </tr>
         <tr>
-            <td><label for="author">Inventory</label></td>
+            <td><label for="inventory">Inventory</label></td>
             <td><input type="text" th:field="*{inventory}" id="inventory" placeholder="1"></td>
         </tr>
     </table>
